appId: drift.armenia
---
- runScript: ../../../selectors/dashboard-selectors.js
- runScript: ../../../selectors/home-selectors.js
- runScript: ../../../selectors/profile-selectors.js
- runScript: ../../../creds/registration-creds.js
- runScript: ../../../creds/profile-creds.js


- launchApp

- runFlow:
    when:
      visible: ${output.dashboardSelectors.welcome_title}
    file: "../../Login/login-with-valid-phone.yaml"

- tapOn:
    point: ${output.homeSelectors.profile_section}
- tapOn: ${output.profileSelectors.profile_page}
- tapOn:
    point: ${output.profileSelectors.profile_photo_edit}
- tapOn: ${output.profileSelectors.change_photo_button}
- tapOn:
    point: ${output.profileSelectors.camera_icon}
- tapOn:
    id: ${output.profileSelectors.camera_shutter_button}
- tapOn:
    id: ${output.profileSelectors.camera_done_button}
- assertVisible: ${output.profileSelectors.photo_updated_message}
- tapOn:
    point: ${output.profileSelectors.phone_back}