appId: drift.armenia
---
- runScript: ../../../selectors/dashboard-selectors.js
- runScript: ../../../selectors/home-selectors.js
- runScript: ../../../selectors/profile-selectors.js
- runScript: ../../../creds/registration-creds.js
- runScript: ../../../creds/profile-creds.js


- launchApp

- runFlow:
    when:
      visible: ${output.dashboardSelectors.welcome_title}
    file: "../../Login/login-with-valid-phone.yaml"

- tapOn:
    point: ${output.homeSelectors.profile_section}
- tapOn: ${output.profileSelectors.profile_page}
- tapOn:
    point: ${output.profileSelectors.profile_photo_edit}

- runFlow:
    when:
      notVisible: ${output.profileSelectors.delete_photo_button}
    file: "./add-profile-photo.yaml"

- tapOn:
    point: ${output.profileSelectors.profile_page_position}
- tapOn:
    point: ${output.profileSelectors.profile_photo_edit}

- runFlow:
    when:
      visible: ${output.profileSelectors.delete_photo_button}
    commands:
        - tapOn: ${output.profileSelectors.delete_photo_button}
        - assertVisible: ${output.profileSelectors.photo_deleted_message}
- tapOn:
    point: ${output.profileSelectors.phone_back}