appId: drift.armenia
---
- runScript: ../../selectors/registration-selectors.js
- runScript: ../../creds/registration-creds.js
- runScript: ../../selectors/dashboard-selectors.js

- clearState: drift.armenia  

- launchApp
- runFlow:
    when:
      visible: ${output.dashboardSelectors.then}
    commands:
      - tapOn: ${output.dashboardSelectors.then}

- assertVisible: ${output.dashboardSelectors.welcome_title}
- tapOn: ${output.registrationSelectors.sign_up_button}
- tapOn: ${output.registrationSelectors.continue_with_email}
- tapOn: ${output.registrationSelectors.email_field}
- inputText: ${output.registrationCreds.already_registered_email}
- tapOn:
    point: ${output.registrationSelectors.terms_of_use}
- tapOn: ${output.registrationSelectors.email_submit_button}
- assertVisible: ${output.registrationSelectors.already_registered_email_error}
