appId: drift.armenia
---
- runScript: ../../selectors/registration-selectors.js
- runScript: ../../creds/registration-creds.js
- runScript: ../../selectors/dashboard-selectors.js

- clearState: drift.armenia

- launchApp
- runFlow:
    when:
      visible: ${output.dashboardSelectors.then}
    commands:
      - tapOn: ${output.dashboardSelectors.then}

- assertVisible: ${output.dashboardSelectors.welcome_title}
- tapOn: ${output.registrationSelectors.sign_up_button}
- tapOn: ${output.registrationSelectors.phone_number_field}
- inputText: ${output.registrationCreds.already_registered_phone}
- tapOn:
    point: ${output.registrationSelectors.phone_number_terms_for_use}
- tapOn: ${output.registrationSelectors.phone_sign_up_button}
- assertVisible: ${output.registrationSelectors.already_registered_phone_error}
