appId: drift.armenia
---
- runScript: ../locators/dashboard-selectors.js
- runScript: ../locators/home-selectors.js
- runScript: ../locators/ride-requests-selectors.js
- runScript: ../creds/ride-requests-creds.js


- launchApp

- runFlow:
    when:
      visible: ${output.dashboardSelectors.welcome_title}
    file: "./login-with-valid-phone.yaml"

- tapOn: ${output.homeSelectors.home_section_title}
- tapOn: ${output.homeSelectors.estimate_field}

- waitForAnimationToEnd:
    timeout: 20000

- runFlow:
    when:
      visible: ${output.rideRequestsSelectors.we_cant_find_location}
    commands:
      - tapOn:
          point: ${output.rideRequestsSelectors.erase_icon_pickup}
      - tapOn: ${output.rideRequestsSelectors.pick_up_field}
      - inputText: ${output.rideRequestsCreds.testing_pick_up2}
      - runFlow:
          when:
            visible: ${output.rideRequestsSelectors.pick_up_select_option2}
          commands:
            - tapOn:  ${output.rideRequestsSelectors.pick_up_select_option2}
            - assertVisible: ${output.rideRequestsSelectors.pick_up_assertion2}


- tapOn: ${output.rideRequestsSelectors.destination_skip}

- waitForAnimationToEnd:
    timeout: 20000

- runFlow:
    when:
      visible: ${output.rideRequestsSelectors.whos_ordering_ride_dialog}
    commands: 
      - tapOn:
          point: ${output.rideRequestsSelectors.me_option}

- scrollUntilVisible:
      element:
        text: ${output.rideRequestsSelectors.evacuator_tariff}
- tapOn:
    text: ${output.rideRequestsSelectors.evacuator_tariff}

- runFlow:
    when:
      visible: ${output.rideRequestsSelectors.order_ride_button}
    commands:
      - tapOn: ${output.rideRequestsSelectors.order_ride_button}
      - assertVisible: ${output.rideRequestsSelectors.searhing_drivers_title}


- extendedWaitUntil:
    notVisible: ${output.rideRequestsSelectors.finding_drivers}
    timeout: 25000

- runFlow:
    when:
      notVisible: ${output.rideRequestsSelectors.finding_drivers}
    commands:
      - swipe:
          start: 50%, 70%
          end: 50%, 50%
      - assertVisible: ${output.rideRequestsSelectors.stop_add_text}
      - extendedWaitUntil:
          visible: ${output.rideRequestsSelectors.driver_is_here_text}
          timeout: 30000
      - assertVisible: ${output.rideRequestsSelectors.driver_is_here_text}
      - extendedWaitUntil:
          notVisible: ${output.rideRequestsSelectors.driver_is_here_text}
          timeout: 30000
      - swipe:
          start: 50%, 70%
          end: 50%, 50%
      - assertVisible: ${output.rideRequestsSelectors.driver_info_text}
      - extendedWaitUntil:
          visible: ${output.rideRequestsSelectors.driver_rate_text}
          timeout: 30000
      - tapOn: ${output.rideRequestsSelectors.skip_ride}

- runFlow:
    when:
      notVisible: ${output.rideRequestsSelectors.order_ride_button}
    commands:
      - tapOn:
          point: ${output.rideRequestsSelectors.back_arrow}


