appId: drift.armenia
---
- runScript: ../../../selectors/dashboard-selectors.js
- runScript: ../../../selectors/home-selectors.js
- runScript: ../../../selectors/activity-selectors.js
- runScript: ../../../selectors/ride-requests-selectors.js
- runScript: ../../../creds/ride-requests-creds.js


- launchApp

- runFlow:
    when:
      visible: ${output.dashboardSelectors.welcome_title}
    file: "../../Login/login-with-valid-phone.yaml"

- tapOn: ${output.homeSelectors.home_section_title}
- tapOn: ${output.homeSelectors.estimate_field}

- waitForAnimationToEnd:
    timeout: 20000

- runFlow:
    when:
      visible: ${output.rideRequestsSelectors.we_cant_find_location}
    commands:
      - tapOn:
          point: ${output.rideRequestsSelectors.erase_icon_pickup}
      - tapOn: ${output.rideRequestsSelectors.pick_up_field}
      - inputText: ${output.rideRequestsCreds.testing_pick_up2}
      - runFlow:
          when:
            visible: ${output.rideRequestsSelectors.pick_up_select_option2}
          commands:
            - tapOn:  ${output.rideRequestsSelectors.pick_up_select_option2}
            - assertVisible: ${output.rideRequestsSelectors.pick_up_asserti

- tapOn: ${output.rideRequestsSelectors.destination_field}
- inputText: ${output.rideRequestsCreds.testing_destination}
- runFlow:
    when:
      visible: ${output.rideRequestsSelectors.destination_select_option}
    commands:
      - tapOn: ${output.rideRequestsSelectors.destination_select_option}
      - assertVisible: ${output.rideRequestsSelectors.destination_assertion}

- tapOn: ${output.rideRequestsSelectors.continue_button}

- waitForAnimationToEnd:
    timeout: 20000

- runFlow:
    when:
      visible: ${output.rideRequestsSelectors.whos_ordering_ride_dialog}
    commands: 
      - tapOn:
          point: ${output.rideRequestsSelectors.me_option}

- scrollUntilVisible:
      element:
        text: ${output.rideRequestsSelectors.evacuator_tariff}
- tapOn:
    text: ${output.rideRequestsSelectors.evacuator_tariff}



- runFlow:
    when:
      visible: ${output.rideRequestsSelectors.order_ride_button}
    commands:
      - tapOn: ${output.rideRequestsSelectors.order_ride_button}
      - assertVisible: ${output.rideRequestsSelectors.searhing_drivers_title}
      - repeat:
          while:
            notVisible: ${output.rideRequestsSelectors.cancel_button}
          commands:
            - swipe:
                start: 50%, 70%
                end: 50%, 50%
      - tapOn: ${output.rideRequestsSelectors.cancel_button}
      - runFlow:
          when:
            visible: ${output.rideRequestsSelectors.confirm_button}
          commands:
            - tapOn: ${output.rideRequestsSelectors.confirm_button}
      - tapOn: ${output.rideRequestsSelectors.dialog_cancel_button}
      - assertVisible: ${output.rideRequestsSelectors.cancelled_ride_message}

- runFlow:
    when:
      notVisible: ${output.rideRequestsSelectors.order_ride_button}
    commands:
      - tapOn:
          point: ${output.rideRequestsSelectors.back_arrow}
