appId: drift.armenia
---
- runScript: ../../../selectors/dashboard-selectors.js
- runScript: ../../../selectors/home-selectors.js
- runScript: ../../../selectors/profile-selectors.js
- runScript: ../../../selectors/settings-selectors.js

- launchApp

- runFlow:
    when:
      visible: ${output.dashboardSelectors.welcome_title}
    file: "../../Login/login-with-valid-phone.yaml"

- tapOn: ${output.homeSelectors.profile_section_title}
- tapOn: ${output.profileSelectors.settings_page}
- tapOn:
    point: ${output.settingsSelectors.language_page}
- tapOn: ${output.settingsSelectors.english_lang}
- tapOn:
    point: ${output.profileSelectors.email_back}
- assertWithAI:
    assertion: The app's language is set to english.
- tapOn:
    point: ${output.settingsSelectors.language_page}
- tapOn: ${output.settingsSelectors.armenian_lang}
- tapOn:
    point: ${output.profileSelectors.email_back}