appId: drift.armenia
---
- runScript: ../../../selectors/dashboard-selectors.js
- runScript: ../../../selectors/home-selectors.js
- runScript: ../../../selectors/profile-selectors.js
- runScript: ../../../selectors/settings-selectors.js
- runScript: ../../../selectors/my-addresses-selectors.js

- launchApp

- runFlow:
    when:
      visible: ${output.dashboardSelectors.welcome_title}
    file: "../../Login/login-with-valid-phone.yaml"

- runFlow:
      when:
          visible: ${output.dashboardSelectors.then}
      commands:
          - tapOn: ${output.dashboardSelectors.then}


- tapOn: ${output.homeSelectors.profile_section_title}
- tapOn: ${output.profileSelectors.settings_page}
- tapOn: ${output.myAddressesSelectors.my_addresses_page}
- tapOn:
    point: ${output.myAddressesSelectors.work_edit_button}
- tapOn: ${output.myAddressesSelectors.find_in_map}
- waitForAnimationToEnd:
    timeout: 2000
- assertWithAI:
    assertion: The map is opened
- swipe:              
    direction: UP
- tapOn: ${output.myAddressesSelectors.done_button}
- tapOn: ${output.myAddressesSelectors.save_button}
- assertVisible: ${output.myAddressesSelectors.work_added_message}